Kind of loose fix for bootstrap navigation collapse start state

--- a/style.css
+++ b/style.css
@@ -327,6 +327,9 @@ a, a:hover, a:visited {
 }
 
 @media (min-width: 992px) {
+  .collapse:not(.show) {
+    display: block;
+  }
   .header .navbar-toggler {
     display: none;
   }
